--- a/public/compass/sass/blog.scss
+++ b/public/compass/sass/blog.scss
@@ -6,9 +6,10 @@
 blog-post{
 
 	div{
+		background: white;
 		display: flex;
 		flex-direction: column;
-		margin: 0px 10px;
+		padding: 10px;
 		>h1{
 			margin: 0px 0px;
 			font-weight: 800;
@@ -27,6 +28,7 @@ blog-post{
 		}
 	}
 	hr{
+		visibility: hidden;
 		margin: 20px auto;
 		width: 80%;
 	    border: 0;
