--- a/public/compass/stylesheets/responsive.css
+++ b/public/compass/stylesheets/responsive.css
@@ -6,43 +6,43 @@ html, body { width: 100%; height: 100%; overflow: hidden; }
 /* line 12, ../sass/responsive.scss */
 body { height: 100%; overflow: scroll; -webkit-overflow-scrolling: touch; }
 
-@media screen and (max-width: 783px) { /* line 22, ../sass/responsive.scss */
-  .projectThumb { border-left: none !important; border-right: none !important; }
-  /* line 25, ../sass/responsive.scss */
+@media screen and (max-width: 1000px) { /* line 21, ../sass/responsive.scss */
+  .projectThumb { border-left: none !important; border-right: none !important; } }
+@media screen and (max-width: 783px) { /* line 29, ../sass/responsive.scss */
   .projectThumb span, .projectThumb div { font-size: 1.6vw; } }
-@media screen and (max-width: 620px) { /* line 35, ../sass/responsive.scss */
+@media screen and (max-width: 620px) { /* line 42, ../sass/responsive.scss */
   .navBar { display: none !important; }
-  /* line 38, ../sass/responsive.scss */
+  /* line 45, ../sass/responsive.scss */
   .navLink { width: 100%; }
-  /* line 41, ../sass/responsive.scss */
-  .projectThumb { flex-direction: column !important; margin: 20px 0px !important; }
-  /* line 44, ../sass/responsive.scss */
-  .projectThumb img { width: 100% !important; }
   /* line 48, ../sass/responsive.scss */
-  .projectThumb span, .projectThumb div { font-size: 10pt; }
+  .projectThumb { flex-direction: column !important; margin: 20px 0px !important; }
   /* line 51, ../sass/responsive.scss */
-  .projectThumb .description { order: 1 !important; }
-  /* line 55, ../sass/responsive.scss */
-  .projectThumb .name1 { display: none !important; }
-  /* line 58, ../sass/responsive.scss */
-  .projectThumb .name2 { display: flex !important; }
-  /* line 62, ../sass/responsive.scss */
-  #content { padding-top: 50px !important; } }
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) { /* line 69, ../sass/responsive.scss */
-  #nav { height: 100px !important; }
-  /* line 71, ../sass/responsive.scss */
-  #nav * { font-size: 30pt !important; }
-  /* line 75, ../sass/responsive.scss */
-  .navBar { display: none !important; }
-  /* line 78, ../sass/responsive.scss */
-  .navLink { width: 100%; }
-  /* line 81, ../sass/responsive.scss */
-  .projectThumb { border-left: none !important; border-right: none !important; flex-direction: column !important; margin: 20px 0px !important; }
-  /* line 85, ../sass/responsive.scss */
   .projectThumb img { width: 100% !important; }
-  /* line 92, ../sass/responsive.scss */
+  /* line 55, ../sass/responsive.scss */
   .projectThumb span, .projectThumb div { font-size: 10pt; }
-  /* line 95, ../sass/responsive.scss */
+  /* line 58, ../sass/responsive.scss */
+  .projectThumb .description { order: 1 !important; }
+  /* line 62, ../sass/responsive.scss */
+  .projectThumb .name1 { display: none !important; }
+  /* line 65, ../sass/responsive.scss */
+  .projectThumb .name2 { display: flex !important; }
+  /* line 69, ../sass/responsive.scss */
+  #content { padding-top: 50px !important; } }
+@media only screen and (min-device-width: 375px) and (max-device-width: 667px) { /* line 76, ../sass/responsive.scss */
+  #nav { height: 100px !important; }
+  /* line 78, ../sass/responsive.scss */
+  #nav * { font-size: 30pt !important; }
+  /* line 82, ../sass/responsive.scss */
+  .navBar { display: none !important; }
+  /* line 85, ../sass/responsive.scss */
+  .navLink { width: 100%; }
+  /* line 88, ../sass/responsive.scss */
+  .projectThumb { border-left: none !important; border-right: none !important; flex-direction: column !important; margin: 20px 0px !important; }
+  /* line 92, ../sass/responsive.scss */
+  .projectThumb img { width: 100% !important; }
+  /* line 99, ../sass/responsive.scss */
+  .projectThumb span, .projectThumb div { font-size: 10pt; }
+  /* line 102, ../sass/responsive.scss */
   .projectThumb .bottombuttons-container { height: 75px; }
-  /* line 97, ../sass/responsive.scss */
+  /* line 104, ../sass/responsive.scss */
   .projectThumb .bottombuttons-container * { font-size: 25pt; } }
