--- a/public/compass/stylesheets/blog.css
+++ b/public/compass/stylesheets/blog.css
@@ -1,12 +1,21 @@
 /*$color1: #48C;*/
 /*$color1: #448;*/
-/* line 8, ../sass/blog.scss */
-blog-post div { background: white; display: flex; flex-direction: column; padding: 15px; }
+/* line 6, ../sass/blog.scss */
+.blogHeader { font-weight: 800; font-size: 60px; }
+
 /* line 13, ../sass/blog.scss */
-blog-post div > h1 { margin: 0px 0px; font-weight: 800; color: #666; }
+blog-post .thePost { background: white; display: flex; flex-direction: column; padding: 15px; box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2); border-bottom: 5px solid #4488cc; margin-bottom: 30px; }
 /* line 18, ../sass/blog.scss */
-blog-post div p, blog-post div p ul * { margin: 0; font-size: 14pt; line-height: 1.6; }
+blog-post .thePost > h1 { margin: 0px 0px; font-weight: 800; color: #666; cursor: pointer; }
 /* line 23, ../sass/blog.scss */
-blog-post div .date { font-style: italic; font-size: 12pt; color: grey; margin: 5px; }
+blog-post .thePost > h1:hover { color: #4488cc; }
+/* line 26, ../sass/blog.scss */
+blog-post .thePost > h1:hover > .fa { opacity: 1; }
 /* line 30, ../sass/blog.scss */
-blog-post hr { visibility: hidden; margin: 20px auto; width: 80%; border: 0; height: 1px; background-image: linear-gradient(to right, transparent, #e69500, transparent); }
+blog-post .thePost .fa { position: relative; opacity: 0; font-size: 20pt; padding-left: 5px; bottom: 2px; }
+/* line 37, ../sass/blog.scss */
+blog-post .thePost p, blog-post .thePost p ul, blog-post .thePost i, blog-post .thePost b * { margin: 0; font-size: 14pt; font-weight: lighter; line-height: 1.6; }
+/* line 43, ../sass/blog.scss */
+blog-post .thePost .date { font-style: italic; font-size: 12pt; color: grey; margin: 3px 0px; }
+/* line 55, ../sass/blog.scss */
+blog-post hr { display: none; margin: 20px auto; width: 80%; border: 0; height: 1px; background-image: linear-gradient(to right, transparent, #e69500, transparent); }
