--- a/public/views/admin.all-posts.html
+++ b/public/views/admin.all-posts.html
@@ -1,1 +1,6 @@
-<div class="blogPost" ng-repeat = "post in posts">{{post.title}}: <span class="preview">{{post.text.slice(0,100)}}</span><span class="preview" ng-if='post.text.length > 100'>…</span></div>
+<div class="blogPost" ng-repeat = "post in posts">
+	{{post.title}}: 
+	<span class="preview">{{post.text.slice(0,100)}}</span>
+	<span class="preview" ng-if='post.text.length > 100'>…</span>
+	<delete-button></delete-button>
+</div>
