--- a/public/views/admin.all-posts.html
+++ b/public/views/admin.all-posts.html
@@ -2,5 +2,5 @@
 	{{post.title}}: 
 	<span class="preview">{{post.text.slice(0,100)}}</span>
 	<span class="preview" ng-if='post.text.length > 100'>…</span>
-	<delete-button></delete-button>
+	<!-- <delete-button></delete-button> -->
 </div>
