--- a/public/compass/sass/admin.scss
+++ b/public/compass/sass/admin.scss
@@ -57,28 +57,43 @@
 
 //delete button
 .delete-button-container{
-  display: inline-block;
-  border: 2px solid #a00;
-  width: 150px;
-  height: 20px;
-  overflow: hidden;
+	display: inline-block;
+	box-sizing: content-box;
+	display: inline-block;
+	border: 2px solid darken(red,20);
+	width: 150px;
+	height: 20px;
+	overflow: hidden;
+	cursor: pointer;
+	*{
+		font-size: 11pt;
+	}
+
 }
 .deleter{
-  width: inherit;
-  height: inherit;
-  background: red;
-  color: white;
+	width: inherit;
+	height: inherit;
+	background: darken(red,10);
+	color: white;
+	padding: 1px;
+	&:hover{
+		background: red;
+	};
 }
 .confirmer{
-  padding: 0;
-  display: inline;
-  color: red;
+	display: inline;
+	color: #888;
+	padding: 1px;
 }
 .confirm-button{
-  width: auto;
-  float: right;
-  display: inline-block;
-  padding: 0px 10px;
-  color: black;
-  border: 1px solid grey;
+	width: auto;
+	margin-left: 1px;
+	float: right;
+	display: inline-block;
+	padding: 0px 10px;
+	color: white;
+	background-color: #888;
+	&:hover{
+		background-color: #AAA;
+	};
 }
