--- a/public/compass/sass/projects.scss
+++ b/public/compass/sass/projects.scss
@@ -8,7 +8,7 @@
 	display: flex;
 	flex-direction: row;
 	width: 100%;
-	border: 2px solid darken($color1,15);
+	/*border: 2px solid darken($color1,15);*/
 	justify-content: space-between;
 	background-color: rgba(255,255,255,0.8);
 	.imgThumb {
