--- a/public/compass/stylesheets/screen.css
+++ b/public/compass/stylesheets/screen.css
@@ -56,7 +56,7 @@ body { height: 100%; overflow: scroll; -webkit-overflow-scrolling: touch; }
   /* line 104, ../sass/responsive.scss */
   .projectThumb .bottombuttons-container * { font-size: 25pt; } }
 /* line 7, ../sass/projects.scss */
-.projectThumb { display: flex; flex-direction: row; width: 100%; border: 2px solid #2a629a; justify-content: space-between; background-color: rgba(255, 255, 255, 0.8); margin-bottom: 25px; box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2); }
+.projectThumb { display: flex; flex-direction: row; width: 100%; /*border: 2px solid darken($color1,15);*/ justify-content: space-between; background-color: rgba(255, 255, 255, 0.8); margin-bottom: 25px; box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2); }
 /* line 14, ../sass/projects.scss */
 .projectThumb .imgThumb { width: 50%; height: 100%; /*padding: 0px;*/ }
 /* line 20, ../sass/projects.scss */
@@ -99,16 +99,22 @@ body { height: 100%; overflow: scroll; -webkit-overflow-scrolling: touch; }
 .blogPost .preview { font-weight: lighter; font-style: italic; display: inline; color: #aaa; }
 
 /* line 59, ../sass/admin.scss */
-.delete-button-container { display: inline-block; border: 2px solid #a00; width: 150px; height: 20px; overflow: hidden; }
+.delete-button-container { display: inline-block; box-sizing: content-box; display: inline-block; border: 2px solid #990000; width: 150px; height: 20px; overflow: hidden; cursor: pointer; }
+/* line 68, ../sass/admin.scss */
+.delete-button-container * { font-size: 11pt; }
 
-/* line 66, ../sass/admin.scss */
-.deleter { width: inherit; height: inherit; background: red; color: white; }
+/* line 73, ../sass/admin.scss */
+.deleter { width: inherit; height: inherit; background: #cc0000; color: white; padding: 1px; }
+/* line 79, ../sass/admin.scss */
+.deleter:hover { background: red; }
 
-/* line 72, ../sass/admin.scss */
-.confirmer { padding: 0; display: inline; color: red; }
+/* line 83, ../sass/admin.scss */
+.confirmer { display: inline; color: #888; padding: 1px; }
 
-/* line 77, ../sass/admin.scss */
-.confirm-button { width: auto; float: right; display: inline-block; padding: 0px 10px; color: black; border: 1px solid grey; }
+/* line 88, ../sass/admin.scss */
+.confirm-button { width: auto; margin-left: 1px; float: right; display: inline-block; padding: 0px 10px; color: white; background-color: #888; }
+/* line 96, ../sass/admin.scss */
+.confirm-button:hover { background-color: #AAA; }
 
 /* line 6, ../sass/blog.scss */
 .blogHeader { font-weight: 800; font-size: 60px; }
