--- a/public/compass/sass/blog.scss
+++ b/public/compass/sass/blog.scss
@@ -34,12 +34,13 @@ blog-post{
 			padding-left: 5px;
 			bottom: 2px;
 		}
-		p,p ul,i,b *{
+		p,p ul,i,b{
 			margin: 0;
 			font-size: 14pt;
 			font-weight: lighter;
 			line-height: 1.6;
 		}
+
 		.date{
 			font-style: italic;
 			font-size:12pt;
