--- a/public/compass/stylesheets/blog.css
+++ b/public/compass/stylesheets/blog.css
@@ -14,8 +14,8 @@ blog-post .thePost > h1:hover > .fa { opacity: 1; }
 /* line 30, ../sass/blog.scss */
 blog-post .thePost .fa { position: relative; opacity: 0; font-size: 20pt; padding-left: 5px; bottom: 2px; }
 /* line 37, ../sass/blog.scss */
-blog-post .thePost p, blog-post .thePost p ul, blog-post .thePost i, blog-post .thePost b * { margin: 0; font-size: 14pt; font-weight: lighter; line-height: 1.6; }
-/* line 43, ../sass/blog.scss */
+blog-post .thePost p, blog-post .thePost p ul, blog-post .thePost i, blog-post .thePost b { margin: 0; font-size: 14pt; font-weight: lighter; line-height: 1.6; }
+/* line 44, ../sass/blog.scss */
 blog-post .thePost .date { font-style: italic; font-size: 12pt; color: grey; margin: 3px 0px; }
-/* line 55, ../sass/blog.scss */
+/* line 56, ../sass/blog.scss */
 blog-post hr { display: none; margin: 20px auto; width: 80%; border: 0; height: 1px; background-image: linear-gradient(to right, transparent, #e69500, transparent); }
