--- a/public/compass/stylesheets/screen.css
+++ b/public/compass/stylesheets/screen.css
@@ -2,11 +2,9 @@
 /*$color1: #48C;*/
 /*$color1: #448;*/
 /* line 11, ../sass/screen.scss */
-body { margin: 0; /*background: url('../../images/concrete_wall.png');*/ background: #DDD; }
-/* line 13, ../sass/screen.scss */
-body * { font-family: 'Roboto', sans-serif; font-size: 10pt; }
+body { margin: 0; font-family: 'Roboto', sans-serif; font-size: 10pt; /*background: url('../../images/concrete_wall.png');*/ background: #DDD; }
 
-/* line 22, ../sass/screen.scss */
+/* line 20, ../sass/screen.scss */
 #content { padding-top: 100px; max-width: 1000px; width: 100%; margin: 0 auto; }
 
 /* line 6, ../sass/responsive.scss */
@@ -83,37 +81,37 @@ body { height: 100%; overflow: scroll; -webkit-overflow-scrolling: touch; }
 /* line 20, ../sass/admin.scss */
 #admin form #title { font-size: 20pt; font-weight: bold; width: 100%; }
 /* line 25, ../sass/admin.scss */
-#admin form textarea { width: 100%; height: 200px; display: inline-block; }
-/* line 30, ../sass/admin.scss */
+#admin form textarea { width: 100%; height: 200px; display: inline-block; font-size: 14pt; }
+/* line 31, ../sass/admin.scss */
 #admin form #tags { width: 100%; }
-/* line 33, ../sass/admin.scss */
+/* line 34, ../sass/admin.scss */
 #admin form button { float: right; }
-/* line 37, ../sass/admin.scss */
+/* line 38, ../sass/admin.scss */
 #admin #togglePreview * { cursor: pointer; display: inline; }
 
-/* line 43, ../sass/admin.scss */
+/* line 44, ../sass/admin.scss */
 .blogPost { background: white; padding: 15px; }
-/* line 46, ../sass/admin.scss */
+/* line 47, ../sass/admin.scss */
 .blogPost, .blogPost * { font-size: 12pt; }
-/* line 49, ../sass/admin.scss */
+/* line 50, ../sass/admin.scss */
 .blogPost .preview { font-weight: lighter; font-style: italic; display: inline; color: #aaa; }
 
-/* line 59, ../sass/admin.scss */
+/* line 60, ../sass/admin.scss */
 .delete-button-container { display: inline-block; box-sizing: content-box; display: inline-block; border: 2px solid #990000; width: 150px; height: 20px; overflow: hidden; cursor: pointer; }
-/* line 68, ../sass/admin.scss */
+/* line 69, ../sass/admin.scss */
 .delete-button-container * { font-size: 11pt; }
 
-/* line 73, ../sass/admin.scss */
+/* line 74, ../sass/admin.scss */
 .deleter { width: inherit; height: inherit; background: #cc0000; color: white; padding: 1px; }
-/* line 79, ../sass/admin.scss */
+/* line 80, ../sass/admin.scss */
 .deleter:hover { background: red; }
 
-/* line 83, ../sass/admin.scss */
+/* line 84, ../sass/admin.scss */
 .confirmer { display: inline; color: #888; padding: 1px; }
 
-/* line 88, ../sass/admin.scss */
+/* line 89, ../sass/admin.scss */
 .confirm-button { width: auto; margin-left: 1px; float: right; display: inline-block; padding: 0px 10px; color: white; background-color: #888; }
-/* line 96, ../sass/admin.scss */
+/* line 97, ../sass/admin.scss */
 .confirm-button:hover { background-color: #AAA; }
 
 /* line 6, ../sass/blog.scss */
@@ -130,10 +128,10 @@ blog-post .thePost > h1:hover > .fa { opacity: 1; }
 /* line 30, ../sass/blog.scss */
 blog-post .thePost .fa { position: relative; opacity: 0; font-size: 20pt; padding-left: 5px; bottom: 2px; }
 /* line 37, ../sass/blog.scss */
-blog-post .thePost p, blog-post .thePost p ul, blog-post .thePost i, blog-post .thePost b * { margin: 0; font-size: 14pt; font-weight: lighter; line-height: 1.6; }
-/* line 43, ../sass/blog.scss */
+blog-post .thePost p, blog-post .thePost p ul, blog-post .thePost i, blog-post .thePost b { margin: 0; font-size: 14pt; font-weight: lighter; line-height: 1.6; }
+/* line 44, ../sass/blog.scss */
 blog-post .thePost .date { font-style: italic; font-size: 12pt; color: grey; margin: 3px 0px; }
-/* line 55, ../sass/blog.scss */
+/* line 56, ../sass/blog.scss */
 blog-post hr { display: none; margin: 20px auto; width: 80%; border: 0; height: 1px; background-image: linear-gradient(to right, transparent, #e69500, transparent); }
 
 /* line 5, ../sass/navbar.scss */
