--- a/public/compass/sass/blog.scss
+++ b/public/compass/sass/blog.scss
@@ -34,11 +34,20 @@ blog-post{
 			padding-left: 5px;
 			bottom: 2px;
 		}
-		p,p ul,i,b{
+		p,p ul,i,b {
 			margin: 0;
 			font-size: 14pt;
 			font-weight: lighter;
 			line-height: 1.6;
+		}
+
+		pre{
+			background: #EEE;
+			padding: 5px;
+		}
+
+		code{
+			background: #EEE;
 		}
 
 		.date{
@@ -47,6 +56,7 @@ blog-post{
 			color: grey;
 			margin: 3px 0px;
 		}
+
 		box-shadow: $shadow1;
 		border-bottom: 5px solid $color1;
 		margin-bottom: 30px;
