--- a/public/compass/sass/blog.scss
+++ b/public/compass/sass/blog.scss
@@ -36,19 +36,29 @@ blog-post{
 		}
 		p,p ul,i,b {
 			margin: 0;
-			font-size: 14pt;
+			font-size: 13pt;
 			font-weight: lighter;
 			line-height: 1.6;
 		}
 
-		pre{
-			background: #EEE;
-			padding: 5px;
-		}
 
-		code{
-			background: #EEE;
+		pre,code { 
+			font-size: 12pt;
+			border: 1px solid #DDD;
+			background: #F7F7F7;
+			padding: 5px;
+			border-radius: 5px;
+
+			white-space:pre-wrap;/*css-3*/ 
+			white-space:-moz-pre-wrap;/*Mozilla,since1999*/ 
+			white-space:-pre-wrap;/*Opera4-6*/ 
+			white-space:-o-pre-wrap;/*Opera7*/ 
+			word-wrap:break-word;
+			code {
+				border: none;
+			}
 		}
+		
 
 		.date{
 			font-style: italic;
