--- a/public/views/admin.add-post.html
+++ b/public/views/admin.add-post.html
@@ -17,5 +17,5 @@
 		</div>
 	</div>
 
-
-	<p marked='post.text' ng-if="previewEnabled"></p>
+	<p></p>
+	<div class="thePost" ng-if="previewEnabled"><p marked='post.text' ></p></div>
