--- a/public/compass/sass/blog.scss
+++ b/public/compass/sass/blog.scss
@@ -8,13 +8,20 @@
 	font-size: 60px;
 }
 
-blog-post{
+
 
 	.thePost{
+
+		img{
+/*			margin-left: -20px;
+			max-width: calc(100% + 40px);*/
+
+			max-width: 100%;
+		}
 		background: white;
 		display: flex;
 		flex-direction: column;
-		padding: 15px;
+		padding: 20px;
 		>h1{
 			margin: 0px 0px;
 			font-weight: 800;
@@ -48,7 +55,6 @@ blog-post{
 			background: #F7F7F7;
 			padding: 5px;
 			border-radius: 5px;
-
 			white-space:pre-wrap;/*css-3*/ 
 			white-space:-moz-pre-wrap;/*Mozilla,since1999*/ 
 			white-space:-pre-wrap;/*Opera4-6*/ 
@@ -74,11 +80,10 @@ blog-post{
 	}
 
 	hr{
-		display: none;
 		margin: 20px auto;
-		width: 80%;
+		width: 100%;
 	    border: 0;
-	    height: 1px;
-	    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), $color2, rgba(0, 0, 0, 0));
+	    height: 2px;
+	    background-color: #DDD;
 	}
-}
+
