--- a/public/compass/sass/screen.scss
+++ b/public/compass/sass/screen.scss
@@ -18,10 +18,65 @@ body{
 
 
 #content{
+	box-sizing: content-box;
 	padding-top: 100px;
-	max-width: 1000px;
 	width: 100%;
+	padding-top: 80px;
+	max-width: calc(100% - 335px);
+	margin-left: 25px;
+
+}
+
+.sidebar{
+	float: right;
+	right: 0px;
+	width: 290px;
+	padding-top: 110px;
+	background: lightgrey;
+	height:calc( 100vh );
+	border: 1px solid darken(lightgrey,10);
+	position: fixed;
+	z-index: 1;
+}
+
+.text-container{
+	visibility: hidden;
+	width: calc(100% - 20px);
+	background: white;
 	margin: 0 auto;
+	margin-top: 18px;
+	font-size: 14pt;
+	color: #444;
+	padding: 5px;
+	border: 1px solid darken(white,10);
+}
+
+.nick-face{
+	z-index: 5;
+	position: relative;
+	clear: both;
+	margin: 0 auto;
+	border: 4px solid $color1;
+	border-radius: 100%;
+	background: transparent;
+	width: 180px;
+	height: 180px;
+	img{
+		z-index: 8;
+		position: relative;
+		transition: .5s;
+		width: 86%;
+		margin-left: 7%;
+		margin-right: 7%;
+		top: -5%;
+		&:hover{
+			transform: scale(1.2)
+		};
+	}
+	&:hover{
+		border: 4px solid $color2;
+	}
+
 }
 
 
