--- a/public/compass/stylesheets/navbar.css
+++ b/public/compass/stylesheets/navbar.css
@@ -1,22 +1,22 @@
 /*$color1: #48C;*/
 /*$color1: #448;*/
 /* line 5, ../sass/navbar.scss */
-#nav { position: fixed; height: 50px; display: flex; width: 100%; margin: 0px 0px 40px; /*box-shadow: 0 20px 50px rgba(255,255,255,0.6);*/ }
-/* line 10, ../sass/navbar.scss */
+#nav { position: fixed; z-index: 2; height: 50px; display: flex; width: 100%; margin: 0px 0px 40px; /*box-shadow: 0 20px 50px rgba(255,255,255,0.6);*/ }
+/* line 11, ../sass/navbar.scss */
 #nav * { font-size: 12pt; text-transform: uppercase; letter-spacing: 2px; }
-/* line 16, ../sass/navbar.scss */
+/* line 17, ../sass/navbar.scss */
 #nav .navBar { background: linear-gradient(#4488cc, #2f6fae); position: relative; color: white; display: inline; box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2); width: 100%; border-bottom: 2px solid #245586; }
-/* line 25, ../sass/navbar.scss */
+/* line 26, ../sass/navbar.scss */
 #nav .beginning { max-width: calc((100vw - 1000px)/2); margin-right: 1px; }
-/* line 29, ../sass/navbar.scss */
+/* line 30, ../sass/navbar.scss */
 #nav .end { width: 100%; margin-left: 1px; }
-/* line 33, ../sass/navbar.scss */
+/* line 34, ../sass/navbar.scss */
 #nav .navLink { outline: none; background: linear-gradient(#4488cc, #2f6fae); position: relative; color: white; padding: 15px; margin: 0 1px; transition: .2s; bottom: 0px; box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2); padding-top: 17px; border-bottom: 2px solid #245586; }
-/* line 46, ../sass/navbar.scss */
+/* line 47, ../sass/navbar.scss */
 #nav .navLink:hover { cursor: pointer; background: linear-gradient(#5895d1, #4488cc); border-bottom: 2px solid #2f6fae; bottom: 3px; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25); }
 
-/* line 60, ../sass/navbar.scss */
+/* line 61, ../sass/navbar.scss */
 .active { border-bottom: 6px solid #e69500 !important; }
 
-/* line 64, ../sass/navbar.scss */
+/* line 65, ../sass/navbar.scss */
 h1 { font-size: 30pt; font-weight: 500; margin: 0; }
