--- a/public/compass/stylesheets/screen.css
+++ b/public/compass/stylesheets/screen.css
@@ -5,7 +5,22 @@
 body { margin: 0; font-family: 'Roboto', sans-serif; font-size: 10pt; /*background: url('../../images/concrete_wall.png');*/ background: #DDD; }
 
 /* line 20, ../sass/screen.scss */
-#content { padding-top: 100px; max-width: 1000px; width: 100%; margin: 0 auto; }
+#content { box-sizing: content-box; padding-top: 100px; width: 100%; padding-top: 80px; max-width: calc(100% - 335px); margin-left: 25px; }
+
+/* line 30, ../sass/screen.scss */
+.sidebar { float: right; right: 0px; width: 290px; padding-top: 110px; background: lightgrey; height: calc( 100vh ); border: 1px solid #bababa; position: fixed; z-index: 1; }
+
+/* line 42, ../sass/screen.scss */
+.text-container { visibility: hidden; width: calc(100% - 20px); background: white; margin: 0 auto; margin-top: 18px; font-size: 14pt; color: #444; padding: 5px; border: 1px solid #e6e6e6; }
+
+/* line 54, ../sass/screen.scss */
+.nick-face { z-index: 5; position: relative; clear: both; margin: 0 auto; border: 4px solid #4488cc; border-radius: 100%; background: transparent; width: 180px; height: 180px; }
+/* line 64, ../sass/screen.scss */
+.nick-face img { z-index: 8; position: relative; transition: .5s; width: 86%; margin-left: 7%; margin-right: 7%; top: -5%; }
+/* line 72, ../sass/screen.scss */
+.nick-face img:hover { transform: scale(1.2); }
+/* line 76, ../sass/screen.scss */
+.nick-face:hover { border: 4px solid #e69500; }
 
 /* line 6, ../sass/responsive.scss */
 html, body { width: 100%; height: 100%; overflow: hidden; }
@@ -71,15 +86,6 @@ body { height: 100%; overflow: scroll; -webkit-overflow-scrolling: touch; }
 .projectThumb .description .bottombuttons-container div { box-sizing: margin-box; width: 100%; margin: 1px; background: linear-gradient(#e69500, #b37400); box-sizing: content-box; text-align: center; padding: 10px; cursor: pointer; }
 /* line 51, ../sass/projects.scss */
 .projectThumb .description .bottombuttons-container div:hover { background: linear-gradient(#ffae1a, #e69500); }
-
-/* line 4, ../sass/about.scss */
-.nick-face { border: 4px solid #4488cc; border-radius: 100%; background: transparent; width: 150px; height: 150px; }
-/* line 10, ../sass/about.scss */
-.nick-face img { position: relative; transition: .5s; width: 86%; margin-left: 7%; margin-right: 7%; top: -5%; }
-/* line 17, ../sass/about.scss */
-.nick-face img:hover { transform: scale(1.2); }
-/* line 21, ../sass/about.scss */
-.nick-face:hover { border: 4px solid #e69500; }
 
 /* line 8, ../sass/admin.scss */
 #admin * { margin-bottom: 10px; }
@@ -152,22 +158,22 @@ body { height: 100%; overflow: scroll; -webkit-overflow-scrolling: touch; }
 hr { margin: 20px auto; width: 100%; border: 0; height: 2px; background-color: #DDD; }
 
 /* line 5, ../sass/navbar.scss */
-#nav { position: fixed; height: 50px; display: flex; width: 100%; margin: 0px 0px 40px; /*box-shadow: 0 20px 50px rgba(255,255,255,0.6);*/ }
-/* line 10, ../sass/navbar.scss */
+#nav { position: fixed; z-index: 2; height: 50px; display: flex; width: 100%; margin: 0px 0px 40px; /*box-shadow: 0 20px 50px rgba(255,255,255,0.6);*/ }
+/* line 11, ../sass/navbar.scss */
 #nav * { font-size: 12pt; text-transform: uppercase; letter-spacing: 2px; }
-/* line 16, ../sass/navbar.scss */
+/* line 17, ../sass/navbar.scss */
 #nav .navBar { background: linear-gradient(#4488cc, #2f6fae); position: relative; color: white; display: inline; box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2); width: 100%; border-bottom: 2px solid #245586; }
-/* line 25, ../sass/navbar.scss */
+/* line 26, ../sass/navbar.scss */
 #nav .beginning { max-width: calc((100vw - 1000px)/2); margin-right: 1px; }
-/* line 29, ../sass/navbar.scss */
+/* line 30, ../sass/navbar.scss */
 #nav .end { width: 100%; margin-left: 1px; }
-/* line 33, ../sass/navbar.scss */
+/* line 34, ../sass/navbar.scss */
 #nav .navLink { outline: none; background: linear-gradient(#4488cc, #2f6fae); position: relative; color: white; padding: 15px; margin: 0 1px; transition: .2s; bottom: 0px; box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.2); padding-top: 17px; border-bottom: 2px solid #245586; }
-/* line 46, ../sass/navbar.scss */
+/* line 47, ../sass/navbar.scss */
 #nav .navLink:hover { cursor: pointer; background: linear-gradient(#5895d1, #4488cc); border-bottom: 2px solid #2f6fae; bottom: 3px; box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25); }
 
-/* line 60, ../sass/navbar.scss */
+/* line 61, ../sass/navbar.scss */
 .active { border-bottom: 6px solid #e69500 !important; }
 
-/* line 64, ../sass/navbar.scss */
+/* line 65, ../sass/navbar.scss */
 h1 { font-size: 30pt; font-weight: 500; margin: 0; }
