changed gitignore again

--- a/public/compass/sass/blog.scss
+++ b/public/compass/sass/blog.scss
@@ -80,10 +80,11 @@
 	}
 
 	hr{
-		margin: 20px auto;
+		margin: 19px auto;
 		width: 100%;
 	    border: 0;
 	    height: 2px;
 	    background-color: #DDD;
 	}
 
+//a new comment!
