--- a/public/compass/sass/screen.scss
+++ b/public/compass/sass/screen.scss
@@ -25,7 +25,7 @@ body{
 }
 
 
-@import './responsive.scss';
+/*@import './responsive.scss';*/
 @import './projects.scss';
 @import './about.scss';
 @import './admin.scss';
