--- a/public/compass/sass/blog.scss
+++ b/public/compass/sass/blog.scss
@@ -19,8 +19,7 @@
 			max-width: 100%;
 		}
 		background: white;
-		display: flex;
-		flex-direction: column;
+		display: block;
 		padding: 20px;
 		>h1{
 			margin: 0px 0px;
